--- a/src/views/43-page.html
+++ b/src/views/43-page.html
@@ -165,7 +165,7 @@
                                                     youstakan
                                                 </p>
                                                 <p class="lk-info-line">
-                                                    <a href="">Изменить</a>
+                                                    <a href="#modal-adress" data-fancybox>Изменить</a>
                                                 </p>
                                             </div>
                                             <div class="lk-form__section">
@@ -213,6 +213,32 @@
                                                     <div class="ill-check ill-check--clear"></div>
                                                     <div class="ill-check ill-check--clear"></div>
                                                 </div>
+                                            </div>
+                                            <div class="lk-form__section">
+                                                <p class="title-small lk-form__title">
+                                                    <span>Юридическое лицо</span>
+                                                </p>
+                                                <label class="lk-checkbox lk-checkbox--form">
+                                                    <input type="radio" name="org-info" class="lk-checkbox__input">
+                                                    <div class="lk-checkbox__icon">
+                                                        <div class="lk-checkbox__marker"></div>
+                                                    </div>
+                                                    <p class="lk-checkbox__text">
+                                                        ИП Мебель на заказ <a href="#org-info" data-fancybox>Реквизиты</a>
+                                                    </p>
+                                                </label>
+                                                <label class="lk-checkbox lk-checkbox--form">
+                                                    <input type="radio" name="org-info" class="lk-checkbox__input">
+                                                    <div class="lk-checkbox__icon">
+                                                        <div class="lk-checkbox__marker"></div>
+                                                    </div>
+                                                    <p class="lk-checkbox__text">
+                                                        ИП Мебель на заказ-2 <a href="#org-info" data-fancybox>Реквизиты</a>
+                                                    </p>
+                                                </label>
+                                                <p class="lk-info-line">
+                                                    <a href="#modal-adress" data-fancybox>Изменить</a>
+                                                </p>
                                             </div>
                                             <a href="" class="btn btn--gray lk-form__btn">
                                                 Назад в корзину
