--- a/src/blocks/modules/lk-menu/lk-menu.scss
+++ b/src/blocks/modules/lk-menu/lk-menu.scss
@@ -30,7 +30,10 @@
 		bottom: 0px;
 		display: block;
 		background-color: $dark;
-		width: 100%;
+		width: 15px;
+		@include r(1200) {
+			width: 8px;
+		}
 	}
 	&:after {
 		content: "";
@@ -40,7 +43,10 @@
 		bottom: 0px;
 		display: block;
 		background-color: $dark;
-		width: 100%;
+		width: 15px;
+		@include r(1200) {
+			width: 8px;
+		}
 	}
 	@include r(1200) {
 		display: block;
