--- a/src/views/32-page.html
+++ b/src/views/32-page.html
@@ -221,7 +221,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a href="" class="btn btn--dark lk-form__btn">
+                                <a href="#add-org" class="btn btn--dark lk-form__btn" data-fancybox>
                                     Добавить новую организацию
                                 </a>
                             </div>
