--- a/src/views/6-page.html
+++ b/src/views/6-page.html
@@ -316,6 +316,9 @@
                                             <svg class="icon-svg">
                                                 <use xlink:href="img/sprites/sprite.svg#icon-star-clear"></use>
                                             </svg>
+                                            <svg class="icon-svg">
+                                                <use xlink:href="img/sprites/sprite.svg#icon-star-full"></use>
+                                            </svg>
                                             <span>
                                                 В избранное
                                             </span>
