--- a/src/blocks/modules/modal/modal.scss
+++ b/src/blocks/modules/modal/modal.scss
@@ -89,6 +89,10 @@
 		max-width: 620px;
 		width: 100%;
 	}
+	&--org {
+		max-width: 948px;
+		width: 100%;
+	}
 	&__content {
 		display: flex;
 		justify-content: space-between;
@@ -122,3 +126,8 @@
 	}
 }
 
+.fancybox-content {
+	@include r(1200) {
+		padding: 20px;
+	}
+}
