--- a/src/views/23-2-page.html
+++ b/src/views/23-2-page.html
@@ -160,6 +160,18 @@
 						</div>
 						<div class="map__nav">
 							<label class="nav-check">
+								<input type="radio" name="floor-1" data-type="0" class="nav-check__input">
+								<div class="nav-check__content">
+									<div class="nav-check__icon">
+										<div class="nav-check__icon-marker"></div>
+									</div>
+									<p class="nav-check__text">
+										ВСЕ КАТЕГОРИИ
+									</p>
+								</div>
+							</label>
+
+							<label class="nav-check">
 								<input type="radio" name="floor-1" data-type="1" class="nav-check__input">
 								<div class="nav-check__content">
 									<div class="nav-check__icon">
