--- a/src/views/index.html
+++ b/src/views/index.html
@@ -5,6 +5,8 @@
     @@include("../blocks/modules/head/head.html")
 </head>
 <body class="body">
+    <!-- Добавляем к ссылке на модалку атрибут data-fancybox -->
+    <a href="#idmodal" data-fancybox>Тык</a>
     <div class="layout">
         @@include("../blocks/modules/header/header.html")
         <main class="layout__main">
