--- a/src/styles/base/_text.scss
+++ b/src/styles/base/_text.scss
@@ -20,6 +20,16 @@
 	// 	border-left: 2px solid #CAD4D4;
 	// 	font-style: italic;
 	// }
+	h3 {
+		font-weight: 700;
+		margin-bottom: 1rem;
+		font-size: 28px;
+	}
+	h4 {
+		font-weight: 700;
+		margin-bottom: 1rem;
+		font-size: 24px;
+	}
 	h5 {
 		font-weight: bold;
 		font-size: 20px;
