--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -5691,9 +5691,10 @@ i {
 .search__input {
   width: 100%;
   height: 40px;
-  border: 1px solid #333333;
+  border: none;
   padding-right: 50px;
   padding-left: 8px;
+  background-color: #4F4F4F;
 }
 
 .search__btn {
@@ -7355,6 +7356,10 @@ i {
   align-items: center;
 }
 
+.head-nav__column {
+  width: 50%;
+}
+
 .head-nav__link {
   text-decoration: none;
   color: #ffffff;
@@ -7440,17 +7445,16 @@ i {
 }
 
 .top-nav__link {
-  padding: 9px 13px;
-  margin-right: 0px;
+  padding: 10px;
   text-transform: uppercase;
-  color: #2E2E2E;
+  color: #ffffff;
   text-decoration: none;
   display: inline-flex;
   align-items: center;
 }
 
 .top-nav__link svg {
-  margin-right: 15px;
+  margin-right: 10px;
 }
 
 .top-nav__link span {
@@ -7648,9 +7652,18 @@ i {
 }
 
 .bottom__btn {
-  width: 280px;
   margin-bottom: 17px;
   border-radius: 4px;
+  max-width: 100%;
+}
+
+.bottom__btn--1 {
+  width: 320px;
+  margin-right: 15px;
+}
+
+.bottom__btn--2 {
+  width: 140px;
 }
 
 .footer-toolbar {
@@ -10846,7 +10859,7 @@ i {
 }
 
 .map__slider {
-  height: 600px;
+  height: 540px;
   margin-bottom: 20px;
 }
 
@@ -12115,7 +12128,7 @@ path {
   }
 
   .bottom__contacts {
-    display: flex;
+    display: block;
     align-items: center;
     padding-top: 16px;
     padding-bottom: 16px;
@@ -12142,6 +12155,16 @@ path {
 
   .bottom__btn {
     margin-bottom: 0px;
+    display: flex;
+  }
+
+  .bottom__btn--1 {
+    margin-bottom: 10px;
+    margin-right: 0px;
+  }
+
+  .bottom__btn--2 {
+    width: 320px;
   }
 
   .footer-toolbar {
