--- a/src/blocks/modules/header/header.scss
+++ b/src/blocks/modules/header/header.scss
@@ -88,6 +88,9 @@
 		display: flex;
 		align-items: center;
 	}
+	&__column {
+		width: 50%;
+	}
 	&__link {
 		text-decoration: none;
 		color: $light;
@@ -164,31 +167,6 @@
 .top-nav {
 	display: flex;
 	align-items: center;
-	// &__home {
-	// 	display: flex;
-	// 	align-items:center;
-	// 	padding: 9px 13px;
-	// 	cursor: pointer;
-	// 	transition: 0.3s all;
-	// 	text-transform: uppercase;
-	// 	background: none;
-	// 	margin-right: 24px;
-	// 	color: $dark;
-	// 	text-decoration: none;
-	// 	@include r(1700) {
-	// 		margin-right: 0px;
-	// 	}
-	// 	&:hover {
-	// 		opacity: 0.7;
-	// 	}
-	// 	svg {
-	// 		margin-right: 14px;
-	// 		width: 16px;
-	// 		height: 16px;
-	// 		position: relative;
-	// 		top: -1px;
-	// 	}
-	// }
 	// &__catalog {
 	// 	display: flex;
 	// 	align-items:center;
@@ -198,7 +176,7 @@
 	// 	text-transform: uppercase;
 	// 	background: none;
 	// 	margin-right: 24px;
-	// 	color: $dark;
+	// 	color: $light;
 	// 	text-decoration: none;
 	// 	@include r(1700) {
 	// 		margin-right: 0px;
@@ -207,21 +185,20 @@
 	// 		opacity: 0.7;
 	// 	}
 	// 	svg {
-	// 		margin-right: 14px;
+	// 		margin-right: 10px;
 	// 		width: 18px;
 	// 		height: 12px;
 	// 	}
 	// }
 	&__link {
-		padding: 9px 13px;
-		margin-right: 0px;
+		padding: 10px;
 		text-transform: uppercase;
-		color: $dark;
+		color: $light;
 		text-decoration: none;
 		display: inline-flex;
 		align-items: center;
 		svg {
-			margin-right: 15px;
+			margin-right: 10px;
 		}
 		span {
 			position: relative;
