--- a/src/styles/base/_ui.scss
+++ b/src/styles/base/_ui.scss
@@ -3,9 +3,10 @@
 	&__input {
 		width: 100%;
 		height: 40px;
-		border: 1px solid #333333;
+		border: none;
 		padding-right: 50px;
 		padding-left: 8px;
+		background-color: #4F4F4F;
 	}
 	&__btn {
 		position: absolute;
