--- a/src/blocks/modules/case/case.scss
+++ b/src/blocks/modules/case/case.scss
@@ -13,8 +13,8 @@
 		margin-bottom: 25px;
 	}
 	&__header {
-		margin-bottom: 50px;
-		height: 60px;
+		margin-bottom: 30px;
+		// height: 60px;
 		display: flex;
 		@include r(1200) {
 			height: auto;
@@ -23,7 +23,7 @@
 		}
 	}
 	&__title {
-		font-size: 30px;
+		font-size: 20px;
 		text-transform: uppercase;
 		font-weight: bold;
 		margin-right: 80px;
@@ -39,11 +39,12 @@
 
 		&--active {
 			padding-left: 18px;
+			// color: $green;
 			position: relative;
 			&:after {
 				left: 0px;
 				position: absolute;
-				bottom: 12px;
+				bottom: 8px;
 				height: 4px;
 				width: 100%;
 				background-color: $green;
@@ -93,7 +94,10 @@
 	}
 	&__status {
 		font-weight: bold;
-		font-size: 30px;
+		font-size: 20px;
+		strong {
+			color: $green;
+		}
 		@include r(1200) {
 			font-size: 22px;
 		}
@@ -202,9 +206,9 @@
 		padding: 20px 10px;
 	}
 	&__title {
-		margin-bottom: 10px;
+		margin-bottom: 20px;
 		font-weight: bold;
-		font-size: 30px;
+		font-size: 20px;
 		line-height: 1.3;
 		@include r(1200) {
 			font-size: 22px;
