--- a/src/blocks/modules/modal/modal.scss
+++ b/src/blocks/modules/modal/modal.scss
@@ -1,21 +1,23 @@
 .modal-menu {
-	// background-color: $light;
-	min-height: 120vh;
-	// padding-top: 100px;
-	padding-bottom: 50px;
 	position: relative;
-	display: block;
+	display: flex;
 	width: 100%;
 	&__container {
 		padding-left: 0px;
 		padding-right: 0px;
+		display: flex;
 	}
 	&__main-title {
 		margin-bottom: 20px;
 	}
+	&__main {
+		flex-grow: 1;
+		min-width: 0;
+		padding: 20px 40px 20px 20px;
+	}
 	&__content {
-		column-count: 4;
-		column-gap: 32px;
+		column-count: 3;
+		column-gap: 20px;
 		visibility: hidden;
 		display: none;
 		&--active {
@@ -28,37 +30,63 @@
 		page-break-inside: avoid;
 	}
 	&__title {
-		display: block;
+		display: flex;
+		align-items: center;
 		text-decoration: none;
-		margin-bottom: 8px;
-		page-break-inside: avoid;
-		width: fit-content;
+		margin-bottom: 4px;
 		&:hover {
 			opacity: 0.7;
 		}
 	}
+	&__title-cat {
+		font-weight: 700;
+		color: #F9F9F9;
+		font-size: 80px;
+		line-height: 1.1;
+	}
 	&__number {
 		font-weight: bold;
-		font-size: 50px;
+		font-size: 40px;
 		color: $green;
+		margin-right: 10px;
 	}
 	&__title-text {
-		font-size: 20px;
+		font-size: 16px;
 		color: $dark;
+		font-weight: 700;
+	}
+	&__nav {
+		width: calc(100% / 12 * 3);
+		flex-shrink: 0;
+		background-color: $black;
+		padding: 78px 30px 30px 30px;
+	}
+	&__nav-title {
+
+	}
+	&__nav-link {
+		display: block;
+		color: $light;
+		text-transform: uppercase;
+		text-decoration: none;
+		margin-bottom: 20px;
+		&:last-of-type {
+			margin-bottom: 0px;
+		}
+		&:hover {
+			opacity: 0.7;
+		}
+		&--active {
+			color: $green;
+		}
 	}
 	&__link {
 		display: block;
 		color: #828282;
 		text-decoration: none;
-		width: fit-content;
 		&:hover {
 			opacity: 0.7;
 		}
-	}
-	&__nav {
-		background-color: $black;
-		margin-bottom: 30px;
-		padding: 15px 70px 15px 30px;
 	}
 }
 
@@ -109,12 +137,12 @@
 		}
 
 		.fancybox-close-small {
-			color: $light !important;
 			height: 54px;
 			width: 54px;
 			transition: 0.3s all;
-			top: 15px;
+			top: 0px;
 			right: 0px;
+			color: #828282;
 		}
 	}
 }
