--- a/src/blocks/modules/modal/modal.scss
+++ b/src/blocks/modules/modal/modal.scss
@@ -109,6 +109,11 @@
 		margin-bottom: 52px;
 		display: flex;
 		justify-content: space-between;
+		cursor: pointer;
+		transition: 0.3s all;
+		&:hover {
+			opacity: 0.7;
+		}
 	}
 }
 
