--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -7161,6 +7161,10 @@ i {
   border-bottom: 1px solid #E5E5E5;
 }
 
+.lk-order--hidden {
+  display: none;
+}
+
 .lk-order:last-of-type {
   border-bottom: 0px;
 }
@@ -7245,6 +7249,7 @@ i {
 
 .lk-order__text strong {
   color: #828282;
+  display: block;
 }
 
 .lk-order__text b {
@@ -9693,11 +9698,27 @@ i {
   margin-right: 8px;
 }
 
+.product-card__favorite svg:nth-child(1) {
+  display: block;
+}
+
+.product-card__favorite svg:nth-child(2) {
+  display: none;
+}
+
 .product-card__favorite span {
   font-weight: bold;
   font-size: 20px;
   text-transform: uppercase;
   color: #828282;
+}
+
+.product-card__favorite--active svg:nth-child(2) {
+  display: block;
+}
+
+.product-card__favorite--active svg:nth-child(1) {
+  display: none;
 }
 
 .product-video iframe {
