--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -31,3 +31,4 @@
 @import "modules/lk-auth/lk-auth";
 @import "modules/lk-access/lk-access";
 @import "modules/lk-menu/lk-menu";
+@import "modules/lk-mob-nav/lk-mob-nav";
