--- a/src/views/33-page.html
+++ b/src/views/33-page.html
@@ -12,9 +12,10 @@
             <section class="single">
                 <div class="container">
                     <div class="single__content">
-                        <div class="single__columns">
+                        @@include("../blocks/modules/lk-mob-nav/lk-mob-nav.html")
+                        <div class="single__columns mobile-hidden">
                             <div class="single__column single__column--2">
-                                @@include("../blocks/modules/lk-menu/lk-menu.html")
+<!--                                 @@include("../blocks/modules/lk-menu/lk-menu.html") -->
                                 <aside class="sidebar lk-side">
                                     <p class="title-small sidebar__title">
                                         <span>Личный кабинет</span>
