--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -46,3 +46,11 @@ i {
 		display: none !important;
 	}
 }
+
+.resized {
+	img {
+		width: 100%;
+		height: 100%;
+		object-fit: contain !important;
+	}
+}
