--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 html,
 body,
 div,
@@ -5437,6 +5439,12 @@ i {
   background: url(../img/bg-svg.svg) 0px 140px no-repeat, url(../img/bg-svg.svg) 0px 1640px no-repeat, url(../img/bg-svg.svg) 0px 3140px no-repeat, url(../img/bg-svg.svg) 0px 4640px no-repeat, url(../img/bg-large-svg.svg) right 50px no-repeat, url(../img/bg-large-svg.svg) right 3250px no-repeat;
 }
 
+.resized img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain !important;
+}
+
 .layout {
   min-height: 100vh;
   flex-direction: column;
@@ -7744,6 +7752,15 @@ i {
   opacity: 0.7;
 }
 
+.bottom-link__text a {
+  text-decoration: none;
+  color: #2E2E2E;
+}
+
+.bottom-link__text a:hover {
+  opacity: 0.7;
+}
+
 .temp {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -7763,12 +7780,18 @@ i {
   position: relative;
   display: flex;
   width: 100%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
 }
 
 .modal-menu__container {
   padding-left: 0px;
   padding-right: 0px;
   display: flex;
+  height: 100%;
 }
 
 .modal-menu__main-title {
@@ -7779,6 +7802,42 @@ i {
   flex-grow: 1;
   min-width: 0;
   padding: 20px 40px 20px 20px;
+  height: 100%;
+  overflow-y: scroll;
+  scrollbar-color: #00C25A;
+  /* «цвет ползунка» «цвет полосы скроллбара» */
+  scrollbar-width: 5px;
+  /* полоса прокрутки (скроллбар) */
+  /* ползунок скроллбара */
+  /* Стрелки */
+}
+
+.modal-menu__main::-webkit-scrollbar {
+  width: 5px;
+  /* ширина для вертикального скролла */
+  height: 8px;
+  /* высота для горизонтального скролла */
+  background-color: #2E2E2E;
+}
+
+.modal-menu__main::-webkit-scrollbar-thumb {
+  background-color: #00C25A;
+}
+
+.modal-menu__main::-webkit-scrollbar-button:vertical:start:decrement {
+  display: none;
+}
+
+.modal-menu__main::-webkit-scrollbar-button:vertical:end:increment {
+  display: none;
+}
+
+.modal-menu__main::-webkit-scrollbar-button:horizontal:start:decrement {
+  display: none;
+}
+
+.modal-menu__main::-webkit-scrollbar-button:horizontal:end:increment {
+  display: none;
 }
 
 .modal-menu__content {
@@ -7911,7 +7970,11 @@ i {
 }
 
 .fancybox-container--menu .fancybox-content {
+  width: 1200px;
+  height: 90vh;
+  max-width: 100%;
   padding: 0px;
+  overflow: hidden;
 }
 
 .fancybox-container--menu .fancybox-close-small {
@@ -7931,6 +7994,12 @@ i {
 
 .menu-phone {
   color: #2E2E2E;
+}
+
+.menu-adress {
+  padding-left: 25px;
+  padding-right: 25px;
+  padding-bottom: 12px;
 }
 
 .breadcrumbs {
@@ -9028,7 +9097,7 @@ i {
 .intro__content {
   width: 50%;
   padding: 41px 47px 63px 47px;
-  min-height: 636px;
+  min-height: 540px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -12366,7 +12435,6 @@ path {
     display: block;
     justify-content: center;
     position: relative;
-    min-height: 180px;
     padding-bottom: 88px;
     min-height: 500px;
     background-position: center;
