--- a/src/blocks/modules/footer/footer.scss
+++ b/src/blocks/modules/footer/footer.scss
@@ -193,4 +193,13 @@
 			opacity: 0.7;
 		}
 	}
+	&__text {
+		a {
+			text-decoration: none;
+			color: $dark;
+			&:hover {
+				opacity: 0.7;
+			}
+		}
+	}
 }
