--- a/src/blocks/modules/modal/modal.scss
+++ b/src/blocks/modules/modal/modal.scss
@@ -2,10 +2,16 @@
 	position: relative;
 	display: flex;
 	width: 100%;
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	right: 0px;
+	bottom: 0px;
 	&__container {
 		padding-left: 0px;
 		padding-right: 0px;
 		display: flex;
+		height: 100%;
 	}
 	&__main-title {
 		margin-bottom: 20px;
@@ -14,6 +20,40 @@
 		flex-grow: 1;
 		min-width: 0;
 		padding: 20px 40px 20px 20px;
+		height: 100%;
+		overflow-y: scroll;
+		scrollbar-color: $green;     /* «цвет ползунка» «цвет полосы скроллбара» */
+			scrollbar-width: 5px;
+
+			/* полоса прокрутки (скроллбар) */
+			&::-webkit-scrollbar {
+			    width: 5px; /* ширина для вертикального скролла */
+			    height: 8px; /* высота для горизонтального скролла */
+			    background-color: $dark;
+			}
+
+			/* ползунок скроллбара */
+			&::-webkit-scrollbar-thumb {
+				background-color: $green;
+			}
+
+			/* Стрелки */
+
+			&::-webkit-scrollbar-button:vertical:start:decrement {
+				display: none;
+			}
+
+			&::-webkit-scrollbar-button:vertical:end:increment {
+				display: none;
+			}
+
+			&::-webkit-scrollbar-button:horizontal:start:decrement {
+				display: none;
+			}
+
+			&::-webkit-scrollbar-button:horizontal:end:increment {
+				display: none;
+			}
 	}
 	&__content {
 		column-count: 3;
@@ -138,8 +178,11 @@
 .fancybox-container {
 	&--menu {
 		.fancybox-content {
-			// width: 100%;
+			width: 1200px;
+			height: 90vh;
+			max-width: 100%;
 			padding: 0px;
+			overflow: hidden;
 		}
 
 		.fancybox-close-small {
