--- a/src/blocks/modules/intro/intro.scss
+++ b/src/blocks/modules/intro/intro.scss
@@ -190,7 +190,7 @@
 		font-weight: bold;
 		font-size: 30px;
 		margin-bottom: 45px;
-		text-transform: uppercase;
+		// text-transform: uppercase;
 		flex-grow: 1;
 		line-height: 1.2;
 		@include r(1200) {
