--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -1,5 +1,5 @@
 // Colors
-$green: #00C25A;
+$green: #00B152;
 $black: #000000;
 $red: #FF3131;
 $dark: #2E2E2E;
@@ -9,3 +9,4 @@ $yellow: #F2994A;
 
 // Fonts
 $font-main: 'Ubuntu', sans-serif;
+// 009035
