--- a/src/views/4-page.html
+++ b/src/views/4-page.html
@@ -96,9 +96,11 @@
                                         <div class="card__tags"></div>
                                         <img src="http://placehold.it/900x900" alt="Название товара">
                                     </a>
-                                    <a href="" class="card__title">
-                                        140.120.61 Фреза концевая DIA D12/NL27/L70/S12
-                                    </a>
+                                    <div class="card__title-box">
+                                        <a href="" class="card__title">
+                                            140.120.61 Фреза концевая DIA D12/NL27/L70/S12 140.120.61 Фреза концевая DIA D12/NL27/L70/S12
+                                        </a>
+                                    </div>
                                     <div class="card__content">
                                         <div class="card__grid">
                                             <div class="card__grid-column">
@@ -184,9 +186,11 @@
                                             </span>
                                         </div>
                                     </a>
-                                    <a href="" class="card__title">
-                                        140.120.61 Фреза концевая DIA D12/NL27/L70/S12
-                                    </a>
+                                    <div class="card__title-box">
+                                        <a href="" class="card__title">
+                                            140.120.61 Фреза концевая DIA D12/NL27/L70/S12 140.120.61 Фреза концевая DIA D12/NL27/L70/S12 140.120.61 Фреза концевая DIA D12/NL27/L70/S12 140.120.61 Фреза концевая DIA D12/NL27/L70/S12
+                                        </a>
+                                    </div>
                                     <div class="card__content">
                                         <div class="card__grid">
                                             <div class="card__grid-column">
@@ -270,9 +274,11 @@
                                             </span>
                                         </div>
                                     </a>
-                                    <a href="" class="card__title">
-                                        140.120.61 Фреза концевая DIA D12/NL27/L70/S12
-                                    </a>
+                                    <div class="card__title-box">
+                                        <a href="" class="card__title">
+                                            140.120.61 Фреза концевая DIA D12/NL27/L70/S12
+                                        </a>
+                                    </div>
                                     <div class="card__content">
                                         <div class="card__grid">
                                             <div class="card__grid-column">
@@ -356,9 +362,11 @@
                                             </span>
                                         </div>
                                     </a>
-                                    <a href="" class="card__title">
-                                        140.120.61 Фреза концевая DIA D12/NL27/L70/S12
-                                    </a>
+                                    <div class="card__title-box">
+                                        <a href="" class="card__title">
+                                            140.120.61 Фреза концевая DIA D12/NL27/L70/S12
+                                        </a>
+                                    </div>
                                     <div class="card__content">
                                         <div class="card__grid">
                                             <div class="card__grid-column">
@@ -437,9 +445,11 @@
                                     <a href class="card__thumb">
                                         <img src="http://placehold.it/900x900" alt="Название товара">
                                     </a>
-                                    <a href="" class="card__title">
-                                        140.120.61 Фреза концевая DIA D12/NL27/L70/S12
-                                    </a>
+                                    <div class="card__title-box">
+                                        <a href="" class="card__title">
+                                            140.120.61 Фреза концевая DIA D12/NL27/L70/S12
+                                        </a>
+                                    </div>
                                     <div class="card__content">
                                         <div class="card__grid">
                                             <div class="card__grid-column">
@@ -523,9 +533,11 @@
                                             </span>
                                         </div>
                                     </a>
-                                    <a href="" class="card__title">
-                                        140.120.61 Фреза концевая DIA D12/NL27/L70/S12
-                                    </a>
+                                    <div class="card__title-box">
+                                        <a href="" class="card__title">
+                                            140.120.61 Фреза концевая DIA D12/NL27/L70/S12
+                                        </a>
+                                    </div>
                                     <div class="card__content">
                                         <div class="card__grid">
                                             <div class="card__grid-column">
@@ -609,9 +621,11 @@
                                             </span>
                                         </div>
                                     </a>
-                                    <a href="" class="card__title">
-                                        140.120.61 Фреза концевая DIA D12/NL27/L70/S12
-                                    </a>
+                                    <div class="card__title-box">
+                                        <a href="" class="card__title">
+                                            140.120.61 Фреза концевая DIA D12/NL27/L70/S12
+                                        </a>
+                                    </div>
                                     <div class="card__content">
                                         <div class="card__grid">
                                             <div class="card__grid-column">
