--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -5608,7 +5608,7 @@ i {
 }
 
 .text a {
-  color: #00C25A;
+  color: #00B152;
 }
 
 .text a:hover {
@@ -5646,7 +5646,7 @@ i {
   margin-bottom: 1em;
   font-size: inherit;
   padding-left: 40px;
-  color: #00C25A;
+  color: #00B152;
 }
 
 .text ul span {
@@ -5665,7 +5665,7 @@ i {
 }
 
 .text-green {
-  color: #00C25A;
+  color: #00B152;
 }
 
 .marker-block {
@@ -5747,7 +5747,7 @@ i {
 }
 
 .btn--green {
-  background-color: #00C25A;
+  background-color: #00B152;
   color: #ffffff;
 }
 
@@ -5759,6 +5759,11 @@ i {
 .btn--light {
   color: #2E2E2E;
   background-color: #ffffff;
+}
+
+.btn--added {
+  opacity: 0.7;
+  pointer-events: none;
 }
 
 .btn:hover {
@@ -5805,7 +5810,7 @@ i {
 }
 
 .checkbox__name a {
-  color: #00C25A;
+  color: #00B152;
 }
 
 .checkbox__name a:hover {
@@ -5813,11 +5818,14 @@ i {
 }
 
 .title {
-  color: #00C25A;
-  text-transform: uppercase;
+  color: #00B152;
   font-weight: bold;
   font-size: 50px;
   line-height: 1.3;
+}
+
+.title--low {
+  text-transform: none;
 }
 
 .title-small {
@@ -5849,7 +5857,7 @@ i {
   bottom: 1px;
   height: 4px;
   width: 100%;
-  background-color: #00C25A;
+  background-color: #00B152;
   content: "";
   z-index: 1;
 }
@@ -5875,7 +5883,7 @@ i {
 .date__date {
   font-weight: bold;
   font-size: 80px;
-  color: #00C25A;
+  color: #00B152;
   line-height: 0.88;
   margin-right: 10px;
   flex-shrink: 0;
@@ -5983,7 +5991,7 @@ i {
 }
 
 .link-file:hover .link-file__title strong {
-  color: #00C25A;
+  color: #00B152;
 }
 
 .link-file__icon {
@@ -6024,7 +6032,7 @@ i {
 }
 
 .pagination__counter span {
-  color: #00C25A;
+  color: #00B152;
   font-size: 50px;
   vertical-align: middle;
 }
@@ -6183,13 +6191,13 @@ i {
 }
 
 .table__price {
-  color: #00C25A;
+  color: #00B152;
   font-size: 14px;
 }
 
 .table__price strong {
   font-weight: bold;
-  font-size: 30px;
+  font-size: 24px;
 }
 
 .table__link {
@@ -6224,13 +6232,13 @@ i {
   stroke: #828282;
 }
 
-.table__arrow-input {
+.table__arrow input {
   display: none;
 }
 
-.table__arrow-input:checked + svg {
-  fill: #00C25A !important;
-  stroke: #00C25A !important;
+.table__arrow input:checked + svg {
+  fill: #00B152 !important;
+  stroke: #00B152 !important;
 }
 
 .table__mob-discript {
@@ -6340,7 +6348,7 @@ i {
 }
 
 .datepicker--cell + .-current- {
-  color: #00C25A;
+  color: #00B152;
 }
 
 .datepicker--day-name {
@@ -6529,7 +6537,7 @@ i {
 }
 
 .ill-check__input:checked + .ill-check__block .ill-check__ill svg {
-  fill: #00C25A;
+  fill: #00B152;
 }
 
 .ill-check__input:checked + .ill-check__block .ill-check__marker {
@@ -6672,7 +6680,7 @@ i {
 }
 
 .lk-info-line a {
-  color: #00C25A;
+  color: #00B152;
   text-decoration: underline;
   font-weight: normal;
 }
@@ -6746,13 +6754,12 @@ i {
 }
 
 .lk-progress {
-  background-color: #00C25A;
+  background-color: #00B152;
   padding: 20px 29px 34px 29px;
   margin-bottom: 48px;
 }
 
 .lk-progress__title {
-  text-transform: uppercase;
   font-weight: bold;
   margin-bottom: 23px;
   font-size: 20px;
@@ -6857,7 +6864,7 @@ i {
 }
 
 .lk-checkbox__text a {
-  color: #00C25A;
+  color: #00B152;
 }
 
 .lk-checkbox__text a:hover {
@@ -6912,8 +6919,6 @@ i {
   transition: 0.3s all;
   padding-right: 16px;
   background-color: inherit;
-  opacity: 0;
-  visibility: hidden;
 }
 
 .remove-all:hover {
@@ -7010,7 +7015,7 @@ i {
 }
 
 .lk-item__text--accent {
-  color: #00C25A;
+  color: #00B152;
 }
 
 .lk-item__text a {
@@ -7111,11 +7116,13 @@ i {
 .lk-table-toolbar__col--result {
   padding: 0px;
   width: 200px;
-  display: block;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .lk-table-toolbar__repair-btn {
-  color: #00C25A;
+  color: #00B152;
   text-decoration: underline;
   height: 40px;
   cursor: pointer;
@@ -7136,7 +7143,7 @@ i {
 }
 
 .lk-table-toolbar__text--accent {
-  color: #00C25A;
+  color: #00B152;
 }
 
 .lk-table-toolbar__text strong {
@@ -7158,7 +7165,7 @@ i {
 }
 
 .lk-table-toolbar__status--green {
-  color: #00C25A;
+  color: #00B152;
 }
 
 .lk-orders {
@@ -7211,7 +7218,7 @@ i {
 }
 
 .lk-order__col--info a {
-  color: #00C25A;
+  color: #00B152;
   font-weight: bold;
   font-size: 20px;
 }
@@ -7278,7 +7285,7 @@ i {
 }
 
 .lk-order__status--green {
-  color: #00C25A;
+  color: #00B152;
 }
 
 .lk-filter {
@@ -7360,8 +7367,12 @@ i {
   align-items: center;
 }
 
-.head-main__section {
-  width: calc(50% - 10px);
+.head-main__section--left {
+  width: calc(40% - 10px);
+}
+
+.head-main__section--right {
+  width: calc(60% - 10px);
 }
 
 .head-main__logo {
@@ -7459,7 +7470,6 @@ i {
 
 .top-nav__link {
   padding: 10px;
-  text-transform: uppercase;
   color: #ffffff;
   text-decoration: none;
   display: inline-flex;
@@ -7476,7 +7486,7 @@ i {
 }
 
 .top-nav__link--active {
-  border: 2px solid #00C25A;
+  border: 2px solid #00B152;
 }
 
 .top-nav__link:hover {
@@ -7518,15 +7528,21 @@ i {
   display: flex;
   align-items: center;
   text-decoration: none;
-  text-transform: uppercase;
   color: #2E2E2E;
+  max-width: 180px;
+  overflow: hidden;
 }
 
 .right-nav__btn span {
   margin-right: 8px;
+  min-width: 0px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .right-nav__btn svg {
+  flex-shrink: 0;
   width: 29px;
   height: 29px;
 }
@@ -7534,6 +7550,7 @@ i {
 .right-info {
   display: flex;
   align-items: center;
+  justify-content: flex-end;
 }
 
 .right-info__phone {
@@ -7555,9 +7572,16 @@ i {
 }
 
 .right-info__text strong {
-  color: #00C25A;
-  text-transform: uppercase;
+  color: #00B152;
   font-weight: bold;
+}
+
+.right-info__text a {
+  color: #2E2E2E;
+}
+
+.right-info__text a:hover {
+  text-decoration: none;
 }
 
 .subscribe {
@@ -7605,13 +7629,13 @@ i {
 .subscribe__btn {
   width: 248px;
   height: 50px;
-  background-color: #00C25A;
+  background-color: #00B152;
 }
 
 .bottom {
   padding-top: 56px;
   padding-bottom: 56px;
-  background-color: #00C25A;
+  background-color: #00B152;
   background-image: url("../img/bg-green.svg");
   background-repeat: no-repeat;
   background-position: left bottom;
@@ -7712,11 +7736,11 @@ i {
 }
 
 .footer-toolbar__link--active {
-  color: #00C25A;
+  color: #00B152;
 }
 
 .footer-toolbar__link--active svg {
-  fill: #00C25A;
+  fill: #00B152;
 }
 
 .footer-toolbar__icon {
@@ -7804,7 +7828,7 @@ i {
   padding: 20px 40px 20px 20px;
   height: 100%;
   overflow-y: scroll;
-  scrollbar-color: #00C25A;
+  scrollbar-color: #00B152;
   /* «цвет ползунка» «цвет полосы скроллбара» */
   scrollbar-width: 5px;
   /* полоса прокрутки (скроллбар) */
@@ -7821,7 +7845,7 @@ i {
 }
 
 .modal-menu__main::-webkit-scrollbar-thumb {
-  background-color: #00C25A;
+  background-color: #00B152;
 }
 
 .modal-menu__main::-webkit-scrollbar-button:vertical:start:decrement {
@@ -7878,7 +7902,7 @@ i {
 .modal-menu__number {
   font-weight: bold;
   font-size: 40px;
-  color: #00C25A;
+  color: #00B152;
   margin-right: 10px;
 }
 
@@ -7898,7 +7922,6 @@ i {
 .modal-menu__nav-link {
   display: block;
   color: #ffffff;
-  text-transform: uppercase;
   text-decoration: none;
   margin-bottom: 20px;
 }
@@ -7912,7 +7935,7 @@ i {
 }
 
 .modal-menu__nav-link--active {
-  color: #00C25A;
+  color: #00B152;
   text-decoration: underline;
 }
 
@@ -8055,7 +8078,7 @@ i {
 }
 
 .sidebar__link strong {
-  color: #00C25A;
+  color: #00B152;
 }
 
 .sidebar__link:hover {
@@ -8063,7 +8086,7 @@ i {
 }
 
 .sidebar__link--active {
-  color: #00C25A;
+  color: #00B152;
   pointer-events: none;
 }
 
@@ -8133,8 +8156,11 @@ i {
 .slider-top__icon {
   position: absolute;
   z-index: 2;
-  right: 10px;
-  bottom: 10px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: 0.3s all;
+  opacity: 0;
 }
 
 .slider-top__icon svg {
@@ -8146,7 +8172,6 @@ i {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 528px;
   outline: none;
   position: relative;
 }
@@ -8156,6 +8181,10 @@ i {
   width: 100%;
   display: block;
   object-fit: contain;
+}
+
+.slider-top__slide:hover .slider-top__icon {
+  opacity: 0.7;
 }
 
 .slider-top__pagination {
@@ -8234,7 +8263,7 @@ i {
 }
 
 .slider-bottom__btn:hover {
-  background-color: #00C25A;
+  background-color: #00B152;
   cursor: pointer;
 }
 
@@ -8282,7 +8311,6 @@ i {
 
 .filter__btn {
   font-weight: normal;
-  text-transform: uppercase;
   width: calc(50% - 8px);
   font-size: 16px;
 }
@@ -8321,9 +8349,8 @@ i {
 }
 
 .filter-word {
-  color: #00C25A;
+  color: #00B152;
   font-weight: bold;
-  text-transform: uppercase;
   font-size: 20px;
   line-height: 1.2;
   margin-bottom: 18px;
@@ -8458,7 +8485,7 @@ i {
 }
 
 .filter-checkbox:hover {
-  color: #00C25A;
+  color: #00B152;
   transition: 0.3s all;
   cursor: pointer;
 }
@@ -8504,7 +8531,7 @@ i {
 }
 
 .filter-label__input:checked + .filter-label__text {
-  color: #00C25A;
+  color: #00B152;
 }
 
 .filter-label__text {
@@ -8868,7 +8895,7 @@ i {
 }
 
 .filter-toggle__input:checked + .filter-toggle__wrap-icon {
-  background-color: #00C25A;
+  background-color: #00B152;
 }
 
 .filter-toggle__input:checked + .filter-toggle__wrap-icon .filter-toggle__icon {
@@ -8926,7 +8953,7 @@ i {
 }
 
 .intro--type-1 .intro__content {
-  background-color: #00C25A;
+  background-color: #00B152;
 }
 
 .intro--type-1 .intro__btn {
@@ -9125,7 +9152,6 @@ i {
   font-weight: bold;
   font-size: 30px;
   margin-bottom: 45px;
-  text-transform: uppercase;
   flex-grow: 1;
   line-height: 1.2;
 }
@@ -9146,7 +9172,6 @@ i {
 
 .case__title {
   font-size: 20px;
-  text-transform: uppercase;
   font-weight: bold;
   margin-right: 80px;
   padding-left: 0px;
@@ -9167,7 +9192,7 @@ i {
   bottom: 4px;
   height: 4px;
   width: 100%;
-  background-color: #00C25A;
+  background-color: #00B152;
   content: "";
   z-index: 1;
 }
@@ -9208,11 +9233,11 @@ i {
 }
 
 .case__status strong {
-  color: #00C25A;
+  color: #00B152;
 }
 
 .case__link-all {
-  color: #00C25A;
+  color: #00B152;
   font-size: 20px;
 }
 
@@ -9286,7 +9311,7 @@ i {
 }
 
 .data-table {
-  background-color: #00C25A;
+  background-color: #00B152;
   color: #2E2E2E;
   padding: 32px 21px;
 }
@@ -9307,7 +9332,7 @@ i {
   font-size: 16px;
   border-collapse: collapse;
   width: 100%;
-  border: 3px solid #00C25A;
+  border: 3px solid #00B152;
 }
 
 .data-table__table td {
@@ -9726,7 +9751,6 @@ i {
 
 .product-card__price-info {
   font-size: 14px;
-  text-transform: uppercase;
 }
 
 .product-card__price-info strong {
@@ -9735,7 +9759,7 @@ i {
 }
 
 .product-card__price-info--green {
-  color: #00C25A;
+  color: #00B152;
 }
 
 .product-card__content {
@@ -9757,8 +9781,8 @@ i {
 .product-card__btn {
   padding-left: 27px;
   padding-right: 27px;
-  text-transform: uppercase;
   margin-bottom: 22px;
+  width: 100%;
 }
 
 .product-card__favorite {
@@ -9792,7 +9816,6 @@ i {
 .product-card__favorite span {
   font-weight: bold;
   font-size: 20px;
-  text-transform: uppercase;
   color: #828282;
 }
 
@@ -9876,11 +9899,11 @@ i {
 }
 
 .sort-type__input:checked + .sort-type__btn-content svg {
-  fill: #00C25A !important;
+  fill: #00B152 !important;
 }
 
 .sort-type__input:checked + .sort-type__btn-content span {
-  color: #00C25A;
+  color: #00B152;
 }
 
 .sort-type__btn {
@@ -10284,7 +10307,7 @@ i {
 }
 
 .sort-quanity__input:checked + span {
-  color: #00C25A;
+  color: #00B152;
 }
 
 .sort-quanity__title {
@@ -10732,17 +10755,32 @@ i {
   background-color: #FF3131;
 }
 
+.card__title-box {
+  height: 48px;
+  position: relative;
+  transition: 0.3s all;
+  margin-bottom: 10px;
+  z-index: 2;
+}
+
 .card__title {
   font-weight: bold;
-  margin-bottom: 10px;
   text-decoration: none;
   display: block;
   color: #2E2E2E;
   flex-grow: 1;
+  word-wrap: break-word;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  max-height: 48px;
+  background-color: #ffffff;
+  overflow: hidden;
 }
 
 .card__title:hover {
-  opacity: 0.7;
+  max-height: 500px;
 }
 
 .card__content {
@@ -10778,7 +10816,7 @@ i {
 }
 
 .card__grid-text--green {
-  color: #00C25A;
+  color: #00B152;
 }
 
 .card__grid-text--red {
@@ -10815,7 +10853,7 @@ i {
 }
 
 .card__btn--green:hover {
-  background-color: #00C25A;
+  background-color: #00B152;
 }
 
 .card__btn--blue:hover {
@@ -11072,7 +11110,6 @@ i {
   margin-left: 80px;
   font-size: 30px;
   position: relative;
-  text-transform: uppercase;
   font-weight: bold;
   background: none;
   padding-left: 18px;
@@ -11092,7 +11129,7 @@ i {
   bottom: 8px;
   left: 0px;
   width: 0%;
-  background-color: #00C25A;
+  background-color: #00B152;
   transition: 0.3s all;
 }
 
@@ -11105,7 +11142,7 @@ i {
 }
 
 .map__nav {
-  background-color: #00C25A;
+  background-color: #00B152;
   padding-top: 40px;
   padding-bottom: 40px;
   column-count: 3;
@@ -11119,7 +11156,7 @@ i {
   right: 100%;
   width: 100%;
   bottom: 0px;
-  background-color: #00C25A;
+  background-color: #00B152;
 }
 
 .map__nav:after {
@@ -11129,7 +11166,7 @@ i {
   left: 100%;
   width: 100%;
   bottom: 0px;
-  background-color: #00C25A;
+  background-color: #00B152;
 }
 
 .map__list {
@@ -11172,7 +11209,7 @@ i {
 }
 
 .map__list-item--active strong {
-  color: #00C25A !important;
+  color: #00B152 !important;
 }
 
 .map__list-item strong {
@@ -11349,7 +11386,7 @@ path {
 }
 
 .lk-auth__column--left {
-  background-color: #00C25A;
+  background-color: #00B152;
   color: #2E2E2E;
 }
 
@@ -11370,7 +11407,6 @@ path {
   font-weight: bold;
   font-size: 50px;
   line-height: 1.2;
-  text-transform: uppercase;
 }
 
 .lk-auth__btn {
@@ -11382,7 +11418,6 @@ path {
   font-weight: bold;
   font-size: 50px;
   line-height: 1.2;
-  text-transform: uppercase;
   margin-bottom: 43px;
 }
 
@@ -11563,7 +11598,7 @@ path {
 }
 
 .side-menu__link strong {
-  color: #00C25A;
+  color: #00B152;
 }
 
 .side-menu__link--active {
@@ -11577,11 +11612,11 @@ path {
 
 .lk-mob-nav {
   display: none;
+  margin-bottom: 40px;
 }
 
 .lk-mob-nav__title {
-  text-transform: uppercase;
-  color: #00C25A;
+  color: #00B152;
   font-weight: 700;
   font-size: 20px;
   margin-bottom: 15px;
@@ -11610,7 +11645,7 @@ path {
 }
 
 .lk-mob-nav__link strong {
-  color: #00C25A;
+  color: #00B152;
 }
 
 @media all and (min-width: 0px) {
@@ -12840,15 +12875,14 @@ path {
 
   .card {
     width: 100%;
-    flex-direction: row;
     flex-wrap: wrap;
+    align-items: center;
   }
 
   .card__thumb {
-    width: 70px;
-    height: 70px;
+    width: 270px;
+    height: 270px;
     order: -8;
-    margin-right: 16px;
     flex-shrink: 0;
   }
 
@@ -12859,6 +12893,12 @@ path {
   .card__title {
     order: -9;
     width: 100%;
+    text-align: center;
+    position: relative;
+  }
+
+  .card__content {
+    text-align: center;
   }
 
   .card__counter {
@@ -12906,6 +12946,10 @@ path {
   .card__mob-toolbar {
     display: flex;
     width: 100%;
+  }
+
+  .card__btn {
+    max-width: 180px;
   }
 
   .service__column {
