--- a/src/blocks/modules/filter/filter.scss
+++ b/src/blocks/modules/filter/filter.scss
@@ -61,7 +61,7 @@
 	}
 	&__btn {
 		font-weight: normal;
-		text-transform: uppercase;
+		// text-transform: uppercase;
 		width: calc(50% - 8px);
 		font-size: 16px;
 	}
@@ -99,7 +99,7 @@
 .filter-word {
 	color: $green;
 	font-weight: bold;
-	text-transform: uppercase;
+	// text-transform: uppercase;
 	font-size: 20px;
 	line-height: 1.2;
 	margin-bottom: 18px;
