--- a/src/blocks/modules/header/header.scss
+++ b/src/blocks/modules/header/header.scss
@@ -60,7 +60,12 @@
 		align-items: center;
 	}
 	&__section {
-		width: calc(50% - 10px);
+		&--left {
+			width: calc(40% - 10px);
+		}
+		&--right {
+			width: calc(60% - 10px);
+		}
 	}
 	&__logo {
 		display: block;
@@ -152,7 +157,6 @@
 	align-items: center;
 	&__link {
 		padding: 10px;
-		text-transform: uppercase;
 		color: $light;
 		text-decoration: none;
 		display: inline-flex;
@@ -201,12 +205,19 @@
 		display: flex;
 		align-items: center;
 		text-decoration: none;
-		text-transform: uppercase;
+		// text-transform: uppercase;
 		color: $dark;
+		max-width: 180px;
+		overflow: hidden;
 		span {
 			margin-right: 8px;
+			min-width: 0px;
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
 		}
 		svg {
+			flex-shrink: 0;
 			width: 29px;
 			height: 29px;
 		}
@@ -216,6 +227,7 @@
 .right-info {
 	display: flex;
 	align-items: center;
+	justify-content: flex-end;
 	&__phone {
 		flex-shrink: 0;
 		color: $dark;
@@ -232,8 +244,14 @@
 		line-height: 1.3;
 		strong {
 			color: $green;
-			text-transform: uppercase;
+			// text-transform: uppercase;
 			font-weight: bold;
+		}
+		a {
+			color: $dark;
+			&:hover {
+				text-decoration: none;
+			}
 		}
 	}
 }
