--- a/src/blocks/modules/lk-auth/lk-auth.scss
+++ b/src/blocks/modules/lk-auth/lk-auth.scss
@@ -37,7 +37,7 @@
 		font-weight: bold;
 		font-size: 50px;
 		line-height: 1.2;
-		text-transform: uppercase;
+		// text-transform: uppercase;
 		@include r(1200) {
 			margin-bottom: 20px;
 			font-size: 24px;
@@ -58,7 +58,7 @@
 		font-weight: bold;
 		font-size: 50px;
 		line-height: 1.2;
-		text-transform: uppercase;
+		// text-transform: uppercase;
 		margin-bottom: 43px;
 		@include r(1200) {
 			margin-bottom: 20px;
