--- a/src/blocks/modules/lk-mob-nav/lk-mob-nav.scss
+++ b/src/blocks/modules/lk-mob-nav/lk-mob-nav.scss
@@ -1,10 +1,11 @@
 .lk-mob-nav {
 	display: none;
+	margin-bottom: 40px;
 	@include r(1200) {
 		display: block;
 	}
 	&__title {
-		text-transform: uppercase;
+		// text-transform: uppercase;
 		color: $green;
 		font-weight: 700;
 		font-size: 20px;
