--- a/src/blocks/modules/map/map.scss
+++ b/src/blocks/modules/map/map.scss
@@ -79,7 +79,7 @@
 		margin-left: 80px;
 		font-size: 30px;
 		position: relative;
-		text-transform: uppercase;
+		// text-transform: uppercase;
 		font-weight: bold;
 		background: none;
 		padding-left: 18px;
