--- a/src/blocks/modules/modal/modal.scss
+++ b/src/blocks/modules/modal/modal.scss
@@ -107,7 +107,7 @@
 	&__nav-link {
 		display: block;
 		color: $light;
-		text-transform: uppercase;
+		// text-transform: uppercase;
 		text-decoration: none;
 		margin-bottom: 20px;
 		&:last-of-type {
