--- a/src/blocks/modules/product/product.scss
+++ b/src/blocks/modules/product/product.scss
@@ -157,7 +157,7 @@
 		}
 		&-info {
 			font-size: 14px;
-			text-transform: uppercase;
+			// text-transform: uppercase;
 			strong {
 				font-weight: bold;
 				font-size: 30px;
@@ -182,8 +182,9 @@
 	&__btn {
 		padding-left: 27px;
 		padding-right: 27px;
-		text-transform: uppercase;
+		// text-transform: uppercase;
 		margin-bottom: 22px;
+		width: 100%;
 		@include r(1200) {
 			margin-bottom: 10px;
 		}
@@ -218,7 +219,7 @@
 		span {
 			font-weight: bold;
 			font-size: 20px;
-			text-transform: uppercase;
+			// text-transform: uppercase;
 			color: #828282;
 			@include r(1200) {
 				font-size: 16px;
