--- a/src/styles/base/_ui.scss
+++ b/src/styles/base/_ui.scss
@@ -61,6 +61,10 @@
 		color: $dark;
 		background-color: #ffffff;
 	}
+	&--added {
+		opacity: 0.7;
+		pointer-events: none;
+	}
 	&:hover {
 		opacity: 0.7;
 	}
@@ -112,10 +116,13 @@
 
 .title {
 	color: $green;
-	text-transform: uppercase;
+	// text-transform: uppercase;
 	font-weight: bold;
 	font-size: 50px;
 	line-height: 1.3;
+	&--low {
+		text-transform: none;
+	}
 	@include r(1200) {
 		font-size: 30px;
 	}
@@ -529,7 +536,7 @@
 		// text-transform: uppercase;
 		strong {
 			font-weight: bold;
-			font-size: 30px;
+			font-size: 24px;
 		}
 	}
 	&__link {
@@ -562,7 +569,7 @@
 		// &--active {
 		// 	fill: $green !important;
 		// }
-		&-input {
+		input {
 			display: none;
 			&:checked {
 				& + svg {
